feat: remove object destructur

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
     "react/sort-comp": ["off"],
     "react/jsx-indent": ["error", 4],
     "react/jsx-indent-props": ["error", 4],
-    "react/prefer-stateless-function": ["error", {"ignorePureComponents": true}],
+    "react/prefer-stateless-function": ["off", {"ignorePureComponents": true}],
     "flowtype-errors/show-errors": "error"
   },
   "settings": {
