--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
     "dependencies": {
         "compression": "^1.6.2",
         "express": "^4.15.0",
+        "greenlock": "^2.1.12",
+        "js-beautify": "^1.6.11",
+        "le-challenge-fs": "^2.0.8",
+        "le-store-certbot": "^2.0.3",
         "log": "^1.4.0",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
         "react-redux": "^5.0.3",
         "react-router": "4.0.0-beta.7",
         "react-router-dom": "4.0.0-beta.7",
+        "react-syntax-highlighter": "^5.0.0",
         "redux": "^3.6.0",
         "redux-actions": "^2.0.1",
         "redux-thunk": "^2.2.0",
         "regenerator-runtime": "^0.10.3",
+        "spdy": "^3.4.4",
         "vhost": "^3.0.2"
     },
     "devDependencies": {
@@ -39,6 +45,7 @@
         "babel-plugin-flow-runtime": "^0.7.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-preset-env": "^1.2.0",
+        "babel-preset-latest": "^6.22.0",
         "babel-preset-react": "^6.23.0",
         "babel-preset-stage-0": "^6.22.0",
         "babel-register": "^6.23.0",
